src/ui/sonarr_ui/downloads/snapshots/managarr__ui__sonarr_ui__downloads__downloads_ui_tests__tests__snapshot_tests__downloads_ui_Downloads.snap
---
source: src/ui/sonarr_ui/downloads/downloads_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title                                         Percent Complete   Size               Output Path                 Indexer                      Download Client      
=> Test Download Title                           50%                3.30 GB            /nfs/tv/Test show/season 1/ kickass torrents             transmission
