src/ui/sonarr_ui/downloads/snapshots/managarr__ui__sonarr_ui__downloads__downloads_ui_tests__tests__snapshot_tests__downloads_ui_renders_with_downloads.snap
---
source: src/ui/sonarr_ui/downloads/downloads_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title                           Percent Compl Size          Output Path          Indexer              Download Client
=> Test Series Download            50%           1.00 GB                                                                
   Another Series Download         100%          2.00 GB
